--- a/assets/scss/default/_custom.scss
+++ b/assets/scss/default/_custom.scss
@@ -99,7 +99,8 @@ section {
   }
   &:hover {
     // transform: translateY(-1px);
-    box-shadow: rgba(50, 50, 93, 0.15) 0px 2px 5px -1px,
+    box-shadow:
+      rgba(50, 50, 93, 0.15) 0px 2px 5px -1px,
       rgba(0, 0, 0, 0.2) 0px 1px 3px -1px;
   }
 }
@@ -181,7 +182,7 @@ section {
 }
 
 section.sponsors-section {
-  background: var(--color-section-bg);
+  background: white;
   padding-bottom: 17rem;
   .container {
     .row {
@@ -224,11 +225,17 @@ section.sponsors-section {
               &.bottle-caps {
                 width: 120px;
               }
-              &.burnett {
+              &.cfnb {
+                width: 179px;
+              }
+              &.prime {
+                width: 198px;
+              }
+              &.heartland {
                 width: 204px;
               }
-              &.cc {
-                width: 230px;
+              &.levahn {
+                width: 204px;
               }
               &.dia {
                 width: 210px;
@@ -318,7 +325,8 @@ section.sponsors-section {
   position: relative;
   z-index: 69;
   overflow: hidden;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
+  box-shadow:
+    rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
     rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
   .row {
     height: 100%;
@@ -624,7 +632,8 @@ section.homepage-notices {
         &:hover {
           transform: translateY(-1px);
           // color: #191919;
-          box-shadow: rgba(0, 0, 0, 0.07) 0px 10px 15px -7px,
+          box-shadow:
+            rgba(0, 0, 0, 0.07) 0px 10px 15px -7px,
             rgba(0, 0, 0, 0.035) 0px 4px 6px -5px;
         }
       }
@@ -641,7 +650,8 @@ section.homepage-notices {
     .the-table-itself {
       background: var(--color-primary);
       // box-shadow: #003b34ea 0px 13px 27px -10px, #003b34ea 0px 8px 16px -16px;
-      box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+      box-shadow:
+        rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
         rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
       border-radius: 10px;
       overflow: hidden;
@@ -793,10 +803,15 @@ a {
     // border-top: 3px solid rgb(227, 227, 227);
     // border: 1px solid rgba(0, 0, 0, 0.109);
     box-shadow: 0 3px 3px -1px rgba(0, 0, 0, 0.072);
-    box-shadow: transparent 0px 64px 64px -32px, transparent 0px 32px 32px -16px,
-      transparent 0px 16px 16px -8px, #003d3d0a 0px 12px 12px -6px,
-      #003d3d0a 0px 6px 6px -3px, #003d3d0a 0px 3px 3px -1.5px,
-      #001f1f14 0px 1px 1px -0.5px, #003d3d0a 0px 0px 0px 1px;
+    box-shadow:
+      transparent 0px 64px 64px -32px,
+      transparent 0px 32px 32px -16px,
+      transparent 0px 16px 16px -8px,
+      #003d3d0a 0px 12px 12px -6px,
+      #003d3d0a 0px 6px 6px -3px,
+      #003d3d0a 0px 3px 3px -1.5px,
+      #001f1f14 0px 1px 1px -0.5px,
+      #003d3d0a 0px 0px 0px 1px;
     background: white;
     padding: 0;
     overflow: hidden;
@@ -862,10 +877,15 @@ a {
       background: var(--color-offset);
       transform: translateY(-5px);
       box-shadow: 0px 9px 22px -5px rgba(24, 16, 16, 0.3019607843);
-      box-shadow: #003d3d0a 0px 64px 64px -32px, #003d3d0a 0px 32px 32px -16px,
-        #003d3d0a 0px 16px 16px -8px, #003d3d0a 0px 12px 12px -6px,
-        #003d3d0a 0px 6px 6px -3px, #003d3d0a 0px 3px 3px -1.5px,
-        #001f1f14 0px 1px 1px -0.5px, #003d3d0a 0px 0px 0px 1px;
+      box-shadow:
+        #003d3d0a 0px 64px 64px -32px,
+        #003d3d0a 0px 32px 32px -16px,
+        #003d3d0a 0px 16px 16px -8px,
+        #003d3d0a 0px 12px 12px -6px,
+        #003d3d0a 0px 6px 6px -3px,
+        #003d3d0a 0px 3px 3px -1.5px,
+        #001f1f14 0px 1px 1px -0.5px,
+        #003d3d0a 0px 0px 0px 1px;
       .bottom {
         h4 {
           color: white;
@@ -1533,7 +1553,8 @@ section.perks {
               min-height: 20px;
               width: 70px;
               transition: all 0.3s ease;
-              box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+              box-shadow:
+                rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
                 rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
             }
             .nav-item {
@@ -1734,7 +1755,8 @@ section.perks {
         backdrop-filter: blur(16px);
         border-radius: 32px;
         border: 1px solid rgba(255, 255, 255, 0.2);
-        box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
+        box-shadow:
+          rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
           rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
         .masters-logo {
           width: 100px;
@@ -1747,7 +1769,8 @@ section.perks {
           right: 10rem;
           padding: 0 20px 5px 20px;
           background: black;
-          box-shadow: rgba(0, 0, 0, 0.3) 0px 20px 25px -5px,
+          box-shadow:
+            rgba(0, 0, 0, 0.3) 0px 20px 25px -5px,
             rgba(0, 0, 0, 0.09) 0px 10px 10px -5px;
           .match-play-logo {
             width: 175px;
@@ -2130,7 +2153,7 @@ section.pro-shop-body {
           height: inherit;
         }
         &.lane {
-          padding-top: 20rem
+          padding-top: 20rem;
         }
       }
       [class*="col"] {
@@ -2445,12 +2468,14 @@ section.pro-shop-body {
       border-radius: 32px;
       overflow: hidden;
       border: 1.5px solid #595959;
-      box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+      box-shadow:
+        rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
         rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
       transition: all 0.15s ease;
       &:hover {
         transform: translateY(-1px);
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+        box-shadow:
+          rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
           rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
       }
     }
@@ -2483,7 +2508,7 @@ section.pro-shop-body {
     }
     .price {
       @include monospaced(rgb(139, 139, 139), 15px);
-      font-size: 14px; 
+      font-size: 14px;
     }
     font-size: 17px;
     .img-box {
